--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,9 +1,9 @@
 .sidebar {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #fff;
-  max-width: 25%;
+  max-width: 20%;
 
   padding: 0px 24px;
 
