--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,9 @@
 @import "./components/header";
 @import "./components/sidebar";
 
+// Pages
+@import "./pages/Home.scss";
+
 *,
 *::before,
 *::after {
