--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -62,6 +62,7 @@
           li a {
             font-size: 18px;
             display: flex;
+            align-items: end;
             gap: 6px;
             color: #333;
             padding: 12px;
@@ -70,12 +71,18 @@
             &:hover {
               background-color: #eee;
             }
+
+            span {
+              font-size: 24px;
+              display: flex;
+              align-items: center;
+            }
           }
         }
 
         &.active {
           background-color: #ddd;
-          
+
           .info-box {
             display: flex;
           }
