--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import "./components/form";
 @import "./components/header";
 @import "./components/sidebar";
+@import "./components/modal";
+@import "./components/cafe";
 
 // Pages
 @import "./pages/Home.scss";
@@ -13,11 +15,18 @@
   padding: 0px;
   box-sizing: border-box;
   outline: none;
+  text-decoration: none;
+  list-style: none;
+}
+
+a {
+  color: #333;
 }
 
 html,
 body {
   scroll-behavior: smooth;
+  font-family: sans-serif;
 }
 
 body {
@@ -27,7 +36,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
 }
 
 /* Track */
