--- a/src/styles/components/_cafe.scss
+++ b/src/styles/components/_cafe.scss
@@ -2,6 +2,70 @@
   background-color: #fff;
   padding: 12px 20px;
   border-radius: 4px;
+
   display: flex;
-  gap: 80px;
+  flex-direction: column;
+  gap: 30px;
+
+  .input-box {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+    // display: flex;
+    // justify-content: space-between;
+    width: 80%;
+
+    label {
+      font-weight: 700;
+    }
+
+    #logoImage {
+      width: 250px;
+      height: 200px;
+    }
+
+    .value {
+      color: rgb(61, 78, 129);
+      font-weight: 700;
+      letter-spacing: 1px;
+
+      &.img-box {
+        position: relative;
+        width: 250px;
+        height: 200px;
+        border: 2px dashed #ddd;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        input {
+          display: none;
+        }
+
+        label {
+          background-color: #bbb;
+          color: #fff;
+          padding: 5px 12px;
+          font-size: 24px;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    input {
+      padding: 7px 12px;
+      border-radius: 4px;
+      border: none;
+      box-shadow: inset 1px 1px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .change-btn {
+      background-color: transparent;
+      border: none;
+      font-size: 16px;
+      color: royalblue;
+      cursor: pointer;
+    }
+  }
 }
