--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -5,9 +5,13 @@
   background-color: #fff;
   max-width: 20%;
   width: 100%;
+  z-index: 10;
 
   .title {
-    padding: 20px;
+    padding: 22px 20px;
+    font-size: 25px;
+    font-weight: 600;
+    display: block;
     border-bottom: 1px solid #aaa;
   }
 
