--- a/src/styles/components/Contents/_cafe.scss
+++ b/src/styles/components/Contents/_cafe.scss
@@ -1,4 +1,13 @@
-.cafe-inner {
+.content-inner {
+  .content-title p {
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-top: 20px;
+    color: royalblue;
+    margin-bottom: -20px;
+  }
+
   background-color: #fff;
   padding: 12px 20px;
   border-radius: 4px;
@@ -7,7 +16,9 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
+}
 
+.cafe-inner {
   position: relative;
   padding-bottom: 80px;
 
