Cafe & Room Category

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 // Contents
 @import "./components/Contents/cafe";
 @import "./components/Contents/banner";
+@import "./components/Contents/roomCategory";
 
 *,
 *::before,
