--- a/src/styles/components/Contents/_banner.scss
+++ b/src/styles/components/Contents/_banner.scss
@@ -1,20 +1,103 @@
 .banner {
+  .content-inner {
+    position: relative;
+  }
+
   form {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: column;
+    gap: 40px;
 
-    p {
-      font-weight: 600;
-      font-size: 20px;
+    .form-top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+
+      p {
+        font-weight: 600;
+        font-size: 20px;
+      }
+
+      label {
+        color: #fff;
+        background-color: royalblue;
+        box-shadow: -10px 10px 50px rgba(65, 105, 225, 0.863);
+
+        padding: 12px 24px;
+        border-radius: 7px;
+
+        border: none;
+        font-size: 16px;
+
+        cursor: pointer;
+
+        transition: transform 0.2s;
+
+        &:active {
+          transform: scale(0.9);
+        }
+      }
     }
 
-    .banner-inputBox {
-      label {
-        background-color: royalblue;
-        color: #fff;
-        padding: 10px 26px;
-        border-radius: 7px;
+    .apply-btn {
+      background-color: royalblue;
+      color: #fff;
+      border: none;
+      box-shadow: -3px 5px 25px rgba(65, 105, 225, 0.671);
+
+      font-size: 16px;
+      padding: 12px 24px;
+      border-radius: 7px;
+
+      position: absolute;
+      bottom: 40px;
+      right: 30px;
+
+      cursor: pointer;
+
+      transition: transform 0.2s;
+
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+
+    .bannerSwiper {
+      max-width: 100%;
+
+      .swiper-item {
+        height: 400px;
+        padding-bottom: 60px;
+
+        position: relative;
+
+        img {
+          width: 100%;
+        }
+
+        span {
+          position: absolute;
+          top: 5px;
+          right: 5px;
+
+          background-color: #fff;
+          border: none;
+          padding: 1px 7px;
+          border-radius: 50%;
+          font-size: 20px;
+          cursor: pointer;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        img {
+          height: 100%;
+        }
       }
     }
   }
