--- a/src/styles/components/Contents/_cafe.scss
+++ b/src/styles/components/Contents/_cafe.scss
@@ -1,4 +1,5 @@
 .content-inner {
+
   .content-title p {
     font-size: 24px;
     font-weight: 600;
@@ -11,7 +12,7 @@
   background-color: #fff;
   padding: 12px 20px;
   border-radius: 4px;
-  height: 88vh;
+  min-height: 88vh;
 
   display: flex;
   flex-direction: column;
