--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -29,8 +29,7 @@
         position: relative;
         cursor: pointer;
 
-        &:hover,
-        &:hover a {
+        &:hover {
           color: royalblue;
         }
 
