--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.2);
+  z-index: 50;
 
   position: fixed;
   top: 0;
