--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "./components/Contents/cafe";
 @import "./components/Contents/banner";
 @import "./components/Contents/roomCategory";
+@import "./components/Contents/rooms";
 
 *,
 *::before,
