--- a/src/styles/components/Contents/_cafe.scss
+++ b/src/styles/components/Contents/_cafe.scss
@@ -1,5 +1,19 @@
-.content-inner {
+@mixin button($bg) {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 
+  background-color: $bg;
+  color: #fff;
+  border: none;
+  padding: 10px 34px;
+  font-size: 16px;
+  border-radius: 4px;
+
+  cursor: pointer;
+}
+
+.content-inner {
   .content-title p {
     font-size: 24px;
     font-weight: 600;
@@ -51,6 +65,19 @@
     align-items: center;
     grid-template-columns: repeat(5, 1fr);
 
+    .confirm-btn {
+      color: royalblue;
+      background-color: transparent;
+      text-decoration: underline;
+      font-size: 15px;
+      border: none;
+      width: 18%;
+      border-radius: 8px;
+      margin-left: 15px;
+
+      cursor: pointer;
+    }
+
     label,
     p {
       font-weight: 700;
@@ -75,6 +102,9 @@
       .img-box {
         display: flex;
         justify-content: start;
+
+        grid-column-start: 2;
+        grid-column-end: 5;
 
         input {
           display: none;
@@ -131,17 +161,10 @@
   }
 
   .createBtn {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
+    @include button(royalblue);
+  }
 
-    background-color: royalblue;
-    color: #fff;
-    border: none;
-    padding: 10px 34px;
-    font-size: 16px;
-    border-radius: 4px;
-
-    cursor: pointer;
+  .delete-btn {
+    @include button(crimson);
   }
 }
