--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "./components/Contents/banner";
 @import "./components/Contents/roomCategory";
 @import "./components/Contents/rooms";
+@import "./components/Contents/orders";
 
 *,
 *::before,
