--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -8,7 +8,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 
   .form-title {
     font-size: 32px;
@@ -20,10 +20,21 @@
   .input-box {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+
+    position: relative;
+
+    &.password-box {
+      margin-top: 20px;
+    }
 
     label {
       font-size: 18px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 7px;
+
+      transition: color 0.2s, transform 0.2s;
     }
 
     input {
@@ -31,6 +42,42 @@
       padding: 7px 12px 7px 10px;
       font-size: 15px;
       border-radius: 4px;
+
+      transition: border 0.2s;
+
+      &:focus {
+        border-color: royalblue;
+      }
+
+      &:valid + label {
+        transform: translateY(-220%);
+        color: royalblue;
+      }
+    }
+
+    &:focus-within label {
+      transform: translateY(-220%);
+      color: royalblue;
+    }
+
+    &:hover {
+      input {
+        border-color: royalblue;
+      }
+
+      label {
+        color: royalblue;
+      }
+    }
+
+    &.not-valid {
+      input {
+        border-color: crimson;
+      }
+
+      label {
+        color: crimson !important;
+      }
     }
   }
 
