--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -12,7 +12,8 @@
     font-size: 25px;
     font-weight: 600;
     display: block;
-    border-bottom: 1px solid #aaa;
+    color: royalblue;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
   }
 
   &-content {
